Fixed batching error and changed loss computation paradigm

--- a/train_unified_lstm.ipynb
+++ b/train_unified_lstm.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -410,7 +410,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -460,7 +460,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -514,7 +514,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# compute_loss: computes the loss for the model over the batch\n",
+    "# ARGUMENTS\n",
+    "# model: EnsembleLSTM model\n",
+    "# loss_fn: torch.nn.CrossEntropyLoss object\n",
+    "# batch: see collate_fn definition\n",
+    "# RETURN: a scalar loss tensor\n",
+    "def compute_loss(model, loss_fn, batch):\n",
+    "    max_seq_length = batch['history'].shape[0]\n",
+    "        \n",
+    "    num_targets = max_seq_length - 1 # Messages start from t = 0, but we start generating at t = 1\n",
+    "\n",
+    "    message_logits, channel_logits = model(batch['history'][:-1], batch['mask'][:-1], batch['instruments'])\n",
+    "\n",
+    "    target_mask = torch.logical_not(batch['mask'][1:])\n",
+    "\n",
+    "    num_valid_targets = target_mask.sum()\n",
+    "\n",
+    "    target_messages = batch['history'][1:, :, 0][target_mask]\n",
+    "\n",
+    "    message_loss = loss_fn(message_logits[target_mask], target_messages)/num_valid_targets\n",
+    "\n",
+    "    channel_losses = torch.zeros(batch_size)\n",
+    "\n",
+    "    for i in range(batch_size):\n",
+    "        channel_logits_i = channel_logits[:, i, :batch['nchan'][i]][target_mask[:, i]]\n",
+    "        target_channels = batch['history'][1:, i, 1][target_mask[:, i]]\n",
+    "        channel_losses[i] = loss_fn(channel_logits_i, target_channels)/num_valid_targets\n",
+    "\n",
+    "    return message_loss + channel_losses.sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -530,7 +567,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -545,7 +582,7 @@
    },
    "outputs": [],
    "source": [
-    "batch_size = 1\n",
+    "batch_size = 10\n",
     "learning_rate = 0.001\n",
     "\n",
     "train_dataset = MIDIDataset('train_unified')\n",
@@ -563,72 +600,27 @@
     "\n",
     "for epoch in range(epochs):\n",
     "    print('Starting epoch %d' %(epoch))\n",
-    "    n_train_iter = 0\n",
     "    for b, batch in enumerate(train_dataloader):\n",
-    "        max_seq_length = batch['history'].shape[0]\n",
-    "        \n",
-    "        num_targets = max_seq_length - 1 # Messages start from t = 0, but we start generating at t = 1\n",
-    "            \n",
     "        print('Starting iteration %d' %(b))\n",
-    "        \n",
-    "        message_logits, channel_logits = model(batch['history'][:-1], batch['mask'][:-1], batch['instruments'])\n",
-    "        \n",
-    "        target_mask = torch.logical_not(batch['mask'][1:])\n",
-    "        \n",
-    "        num_valid_targets = target_mask.sum()\n",
-    "        \n",
-    "        target_messages = batch['history'][1:, :, 0][target_mask]\n",
-    "    \n",
-    "        message_loss = loss_fn(message_logits[target_mask], target_messages)/num_valid_targets\n",
-    "        \n",
-    "        channel_losses = torch.zeros(batch_size)\n",
-    "        \n",
-    "        for i in range(batch_size):\n",
-    "            channel_logits_i = channel_logits[:, i, :batch['nchan'][i]][target_mask[:, i]]\n",
-    "            target_channels = batch['history'][1:, i, 1][target_mask[:, i]]\n",
-    "            channel_losses[i] = loss_fn(channel_logits_i, target_channels)/num_valid_targets\n",
-    "            \n",
-    "        loss = message_loss + channel_losses\n",
-    "\n",
+    "        loss = compute_loss(model, loss_fn, batch)\n",
     "        optimizer.zero_grad()\n",
     "        loss.backward()\n",
     "        optimizer.step()\n",
-    "        train_losses[epoch] += loss.data\n",
     "        \n",
     "    torch.save(model.state_dict(), 'trained_models_12_3/epoch' + str(epoch) + '.pth')\n",
     "\n",
     "    print('Computing test loss')\n",
-    "    n_test_iter = 0\n",
-    "    for b, batch in enumerate(test_dataloader):\n",
-    "        max_seq_length = batch['history'].shape[0]\n",
-    "        \n",
-    "        num_targets = max_seq_length - 1 # Messages start from t = 0, but we start generating at t = 1\n",
-    "        \n",
-    "        message_logits, channel_logits = model(batch['history'][:-1], batch['mask'][:-1], batch['instruments'])\n",
-    "        \n",
-    "        target_mask = torch.logical_not(batch['mask'][1:])\n",
-    "        \n",
-    "        num_valid_targets = target_mask.sum()\n",
-    "        \n",
-    "        target_messages = batch['history'][1:, :, 0][target_mask]\n",
-    "    \n",
-    "        message_loss = loss_fn(message_logits[target_mask], target_messages)/num_valid_targets\n",
-    "        \n",
-    "        channel_losses = torch.zeros(batch_size)\n",
-    "        \n",
-    "        for i in range(batch_size):\n",
-    "            channel_logits_i = channel_logits[:, :, :batch['nchan'][i]][target_mask]\n",
-    "            target_channels = batch['history'][1:, i, 1][target_mask]\n",
-    "            channel_losses[i] = loss_fn(channel_logits_i, target_channels)/num_valid_targets\n",
-    "            \n",
-    "        loss = message_loss + channel_losses\n",
-    "\n",
+    "    for batch in test_dataloader:\n",
+    "        loss = compute_loss(model, loss_fn, batch)\n",
     "        test_losses[epoch] += loss.data\n",
     "        \n",
-    "        n_test_iter += 1\n",
+    "    print('Computing train loss')\n",
+    "    for batch in train_dataloader:\n",
+    "        loss = compute_loss(model, loss_fn, batch)\n",
+    "        train_losses[epoch] += loss.data\n",
     "    \n",
-    "    train_losses[epoch] /= n_train_iter\n",
-    "    test_losses[epoch] /= n_test_iter\n",
+    "    train_losses[epoch] /= len(train_dataloader)\n",
+    "    test_losses[epoch] /= len(test_dataloader)\n",
     "    print('Train Loss: %f, Test Loss: %f' %(train_losses[epoch], test_losses[epoch]))"
    ]
   },
@@ -681,6 +673,7 @@
     "# Start with a time shift\n",
     "gen_history = torch.zeros((1, 1, 2), dtype=torch.long)\n",
     "gen_history[0, 0, 0] = 387\n",
+    "gen_history[0, 0, 1] = 1\n",
     "\n",
     "# Violin\n",
     "instruments = torch.zeros((2, 1), dtype=torch.long)\n",
