Made it so that all time shifts are associated with -1. Also fixed batch size bug in compute_loss

--- a/preprocess_unified_train_test.ipynb
+++ b/preprocess_unified_train_test.ipynb
@@ -10,21 +10,7 @@
      "output_type": "stream",
      "text": [
       "Starting Cambini\n",
-      "Starting Faure\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/opt/conda/lib/python3.7/site-packages/pretty_midi/pretty_midi.py:101: RuntimeWarning: Tempo, Key or Time signature change events found on non-zero tracks.  This is not a valid type 0 or type 1 MIDI file.  Tempo, Key or Time Signature may be wrong.\n",
-      "  RuntimeWarning)\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Starting Faure\n",
       "Starting Brahms\n",
       "Starting Schubert\n",
       "Starting Beethoven\n",
@@ -221,9 +207,6 @@
     "        data_with_tshifts = []\n",
     "        channels_with_tshifts = []\n",
     "        \n",
-    "        # We treat the time shift event as a separate instrument/channel\n",
-    "        num_channels = np.amax(channels) + 1\n",
-    "        \n",
     "        for m in range(data.shape[0] - 1):\n",
     "            data_with_tshifts.append(data[m])\n",
     "            channels_with_tshifts.append(channels[m])\n",
@@ -231,8 +214,8 @@
     "                append_time_shift(data_with_tshifts, times[m + 1] - times[m])\n",
     "                num_append = len(data_with_tshifts) - len(channels_with_tshifts)\n",
     "                \n",
-    "                # We treat the time shift event as a separate instrument\n",
-    "                channels_with_tshifts = channels_with_tshifts + [num_channels for i in range(num_append)]\n",
+    "                # We treat the time shift event as instrument -1\n",
+    "                channels_with_tshifts = channels_with_tshifts + [-1 for i in range(num_append)]\n",
     "\n",
     "        data_with_tshifts = np.expand_dims(np.array(data_with_tshifts), 1)\n",
     "        channels_with_tshifts = np.expand_dims(np.array(channels_with_tshifts), 1)\n",
