--- a/preprocess_unified.ipynb
+++ b/preprocess_unified.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -203,9 +203,6 @@
     "        data_with_tshifts = []\n",
     "        channels_with_tshifts = []\n",
     "        \n",
-    "        # We treat the time shift event as a separate instrument/channel\n",
-    "        num_channels = np.amax(channels) + 1\n",
-    "        \n",
     "        for m in range(data.shape[0] - 1):\n",
     "            data_with_tshifts.append(data[m])\n",
     "            channels_with_tshifts.append(channels[m])\n",
@@ -213,12 +210,13 @@
     "                append_time_shift(data_with_tshifts, times[m + 1] - times[m])\n",
     "                num_append = len(data_with_tshifts) - len(channels_with_tshifts)\n",
     "                \n",
-    "                # We treat the time shift event as a separate instrument\n",
-    "                channels_with_tshifts = channels_with_tshifts + [num_channels for i in range(num_append)]\n",
+    "                # We say that all time shifts occur on channel -1\n",
+    "                channels_with_tshifts = channels_with_tshifts + [-1 for i in range(num_append)]\n",
     "\n",
     "        data_with_tshifts = np.expand_dims(np.array(data_with_tshifts), 1)\n",
     "        channels_with_tshifts = np.expand_dims(np.array(channels_with_tshifts), 1)\n",
     "        data = np.concatenate((data_with_tshifts, channels_with_tshifts), axis=1)\n",
+    "        \n",
     "        np.save('preprocessed_data_unified/recording' + str(fnum) + '.npy', data)\n",
     "        np.save('preprocessed_data_unified/instruments' + str(fnum) + '.npy', instruments)\n",
     "        \n",
