Modified the train test split since it caused gcloud to be very slow

--- a/train_unified_lstm.ipynb
+++ b/train_unified_lstm.ipynb
@@ -260,8 +260,8 @@
    },
    "outputs": [],
    "source": [
-    "recording = np.load('preprocessed_data_unified/recording318.npy', allow_pickle=True)\n",
-    "instruments_np = np.load('preprocessed_data_unified/instruments318.npy', allow_pickle=True)\n",
+    "recording = np.load('train_unified/recording0.npy', allow_pickle=True)\n",
+    "instruments_np = np.load('train_unified/instruments0.npy', allow_pickle=True)\n",
     "\n",
     "nsamples = 100\n",
     "\n",
@@ -370,7 +370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -420,7 +420,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -470,7 +470,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -511,7 +511,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 109,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -527,7 +527,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 110,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -540,10 +540,23 @@
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Starting epoch 0\n",
+      "Starting iteration 0\n",
+      "Starting iteration 1\n",
+      "Starting iteration 2\n",
+      "Starting iteration 3\n"
+     ]
+    }
+   ],
    "source": [
     "batch_size = 10\n",
     "learning_rate = 0.001\n",
+    "chunk_size = 500\n",
     "\n",
     "train_dataset = MIDIDataset('train_unified')\n",
     "train_dataloader = torch.utils.data.DataLoader(train_dataset, batch_size=batch_size, shuffle=True, collate_fn=collate_fn)\n",
@@ -556,28 +569,52 @@
     "train_losses = np.zeros(epochs)\n",
     "test_losses = np.zeros(epochs)\n",
     "\n",
-    "model.train()\n",
-    "\n",
     "for epoch in range(epochs):\n",
     "    print('Starting epoch %d' %(epoch))\n",
+    "    model.train()\n",
     "    for b, batch in enumerate(train_dataloader):\n",
     "        print('Starting iteration %d' %(b))\n",
-    "        loss = compute_loss(model, loss_fn, batch)\n",
-    "        optimizer.zero_grad()\n",
-    "        loss.backward()\n",
-    "        optimizer.step()\n",
+    "        for chunk_start in range(0, batch['history'].shape[0], chunk_size):\n",
+    "            chunk_end = min(batch['history'].shape[0], chunk_start + chunk_size)\n",
+    "            \n",
+    "            chunk = {'history': batch['history'][chunk_start:chunk_end],\n",
+    "                     'instruments': batch['instruments'],\n",
+    "                     'mask': batch['mask'][chunk_start:chunk_end],\n",
+    "                     'nchan': batch['nchan']}\n",
+    "\n",
+    "            loss = compute_loss(model, loss_fn, chunk)\n",
+    "            optimizer.zero_grad()\n",
+    "            loss.backward()\n",
+    "            optimizer.step()\n",
     "        \n",
     "    torch.save(model.state_dict(), 'trained_models_12_3/epoch' + str(epoch) + '.pth')\n",
     "\n",
     "    print('Computing test loss')\n",
+    "    model.eval()\n",
     "    for batch in test_dataloader:\n",
-    "        loss = compute_loss(model, loss_fn, batch)\n",
-    "        test_losses[epoch] += loss.data\n",
+    "        for chunk_start in range(0, batch['history'].shape[0], chunk_size):\n",
+    "            chunk_end = min(batch['history'].shape[0], chunk_start + chunk_size)\n",
+    "            \n",
+    "            chunk = {'history': batch['history'][chunk_start:chunk_end],\n",
+    "                     'instruments': batch['instruments'],\n",
+    "                     'mask': batch['mask'][chunk_start:chunk_end],\n",
+    "                     'nchan': batch['nchan']}\n",
+    "\n",
+    "            loss = compute_loss(model, loss_fn, chunk)\n",
+    "            test_losses[epoch] += loss.data\n",
     "        \n",
     "    print('Computing train loss')\n",
     "    for batch in train_dataloader:\n",
-    "        loss = compute_loss(model, loss_fn, batch)\n",
-    "        train_losses[epoch] += loss.data\n",
+    "        for chunk_start in range(0, batch['history'].shape[0], chunk_size):\n",
+    "            chunk_end = min(batch['history'].shape[0], chunk_start + chunk_size)\n",
+    "            \n",
+    "            chunk = {'history': batch['history'][chunk_start:chunk_end],\n",
+    "                     'instruments': batch['instruments'],\n",
+    "                     'mask': batch['mask'][chunk_start:chunk_end],\n",
+    "                     'nchan': batch['nchan']}\n",
+    "\n",
+    "            loss = compute_loss(model, loss_fn, chunk)\n",
+    "            train_losses[epoch] += loss.data\n",
     "    \n",
     "    train_losses[epoch] /= len(train_dataloader)\n",
     "    test_losses[epoch] /= len(test_dataloader)\n",
@@ -602,7 +639,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -627,7 +664,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [],
    "source": [
