--- a/preprocess_unified.ipynb
+++ b/preprocess_unified.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -114,6 +114,9 @@
     "fnum = 0 # Which file are we writing currently?\n",
     "\n",
     "data_fnames = [] # Save file name corresponding to each numpy array\n",
+    "\n",
+    "train = 0\n",
+    "\n",
     "for composer in os.listdir(base_path):\n",
     "    print('Starting ' + composer)\n",
     "    for fname in os.listdir(base_path + composer):\n",
@@ -217,8 +220,16 @@
     "        channels_with_tshifts = np.expand_dims(np.array(channels_with_tshifts), 1)\n",
     "        data = np.concatenate((data_with_tshifts, channels_with_tshifts), axis=1)\n",
     "        \n",
-    "        np.save('preprocessed_data_unified/recording' + str(fnum) + '.npy', data)\n",
-    "        np.save('preprocessed_data_unified/instruments' + str(fnum) + '.npy', instruments)\n",
+    "        # 80% train, 20% test\n",
+    "        if train == 4:\n",
+    "            folder = 'test'\n",
+    "        else:\n",
+    "            folder = 'train'\n",
+    "            \n",
+    "        np.save(folder + '_unified/recording' + str(fnum) + '.npy', data)\n",
+    "        np.save(folder + '_unified/instruments' + str(fnum) + '.npy', instruments)\n",
+    "        \n",
+    "        train = (train + 1)%5\n",
     "        \n",
     "        data_fnames.append(composer + '/' + fname)\n",
     "        fnum += 1\n",
