Made chunk start at most length - 2 to avoid nans in loss

--- a/data_to_midi_unified.ipynb
+++ b/data_to_midi_unified.ipynb
@@ -18,17 +18,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
-    "data = np.load('test_history.npy', allow_pickle=True)\n",
-    "instruments = np.load('test_instruments.npy', allow_pickle=True)"
+    "data = np.load('gen_history.npy', allow_pickle=True)\n",
+    "instruments = np.load('gen_instruments.npy', allow_pickle=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,11 +79,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
-    "recording.write(\"test_midi.mid\")"
+    "recording.write(\"gen_midi.mid\")"
    ]
   },
   {
