--- a/train_unified_lstm.ipynb
+++ b/train_unified_lstm.ipynb
@@ -540,19 +540,7 @@
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Starting epoch 0\n",
-      "Starting iteration 0\n",
-      "Starting iteration 1\n",
-      "Starting iteration 2\n",
-      "Starting iteration 3\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "batch_size = 10\n",
     "learning_rate = 0.001\n",
@@ -574,7 +562,7 @@
     "    model.train()\n",
     "    for b, batch in enumerate(train_dataloader):\n",
     "        print('Starting iteration %d' %(b))\n",
-    "        for chunk_start in range(0, batch['history'].shape[0], chunk_size):\n",
+    "        for chunk_start in range(0, batch['history'].shape[0] - 1, chunk_size):\n",
     "            chunk_end = min(batch['history'].shape[0], chunk_start + chunk_size)\n",
     "            \n",
     "            chunk = {'history': batch['history'][chunk_start:chunk_end],\n",
@@ -592,7 +580,7 @@
     "    print('Computing test loss')\n",
     "    model.eval()\n",
     "    for batch in test_dataloader:\n",
-    "        for chunk_start in range(0, batch['history'].shape[0], chunk_size):\n",
+    "        for chunk_start in range(0, batch['history'].shape[0] - 1, chunk_size):\n",
     "            chunk_end = min(batch['history'].shape[0], chunk_start + chunk_size)\n",
     "            \n",
     "            chunk = {'history': batch['history'][chunk_start:chunk_end],\n",
@@ -605,7 +593,7 @@
     "        \n",
     "    print('Computing train loss')\n",
     "    for batch in train_dataloader:\n",
-    "        for chunk_start in range(0, batch['history'].shape[0], chunk_size):\n",
+    "        for chunk_start in range(0, batch['history'].shape[0] - 1, chunk_size):\n",
     "            chunk_end = min(batch['history'].shape[0], chunk_start + chunk_size)\n",
     "            \n",
     "            chunk = {'history': batch['history'][chunk_start:chunk_end],\n",
@@ -639,7 +627,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 115,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -664,7 +652,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 116,
    "metadata": {},
    "outputs": [],
    "source": [
