--- a/train_unified.ipynb
+++ b/train_unified.ipynb
@@ -438,7 +438,7 @@
    "source": [
     "# compute_loss: computes the loss for the model over the batch\n",
     "# ARGUMENTS\n",
-    "# model: EnsembleLSTM model\n",
+    "# model: EnsembleTransformer model\n",
     "# loss_fn: torch.nn.CrossEntropyLoss object\n",
     "# batch: see collate_fn definition\n",
     "# RETURN: a scalar loss tensor\n",
@@ -477,14 +477,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "embed_dim = 256\n",
-    "hidden_size = 1024\n",
+    "embed_dim = 512\n",
+    "heads = 4\n",
+    "attention_layers = 6\n",
+    "ff_size = 512\n",
     "\n",
     "grad_clip = 10\n",
     "\n",
-    "model = EnsembleLSTM(message_dim, embed_dim, num_instruments, hidden_size)\n",
+    "model = EnsembleTransformer(message_dim, embed_dim, num_instruments, heads, attention_layers, ff_size)\n",
     "for p in model.parameters():\n",
-    "    p.register_hook(lambda grad: torch.clamp(grad, -grad_clip, grad_clip))"
+    "    p.register_hook(lambda grad: torch.clamp(grad, -grad_clip, grad_clip))\n",
+    "    \n",
+    "model.eval() # Training with eval just to see if we can overfit without dropout\n",
+    "pass"
    ]
   },
   {
@@ -663,7 +668,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.5"
+   "version": "3.7.8"
   }
  },
  "nbformat": 4,
