--- a/train_unified_lstm.ipynb
+++ b/train_unified_lstm.ipynb
@@ -657,7 +657,7 @@
    "outputs": [],
    "source": [
     "np.save('gen_history.npy', gen_history.squeeze(1).detach().numpy())\n",
-    "np.save('gen_instruments.npy', [instrument_numbers[i] for i in instruments[:-1, 0]])"
+    "np.save('gen_instruments.npy', [instrument_numbers[i] for i in instruments[:, 0]])"
    ]
   },
   {
@@ -689,7 +689,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.8"
+   "version": "3.7.5"
   }
  },
  "nbformat": 4,
