--- a/composer.ipynb
+++ b/composer.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,17 +78,22 @@
     "    # along dimension 0\n",
     "    # mask: an LxB tensor, containing True in any locations where history contains padding\n",
     "    # instruments: a NxB tensor indicating the instruments in each channel. This should be END-PADDED along dimension 0\n",
+    "    # inst_mask: an NxB tensor containing False where an instrument exists and True otherwise\n",
     "    # RETURN: an LxBxD tensor representing the logits for the next message in each batch\n",
-    "    def forward(self, history, mask, instruments):\n",
+    "    def forward(self, history, mask, instruments, inst_mask):\n",
     "        L = history.shape[0] # longest length\n",
     "        B = history.shape[1] # batch size\n",
     "        assert(mask.shape == history.shape)\n",
+    "        assert(instruments.shape == inst_mask.shape)\n",
     "        \n",
     "        # NxBxD\n",
     "        inst_embed = torch.tanh(self.i_embedding(instruments))\n",
     "               \n",
     "        # 1xBxD\n",
-    "        ensemble_vec, weights = self.inst_attention(torch.ones((1, B, self.embed_dim)), inst_embed, inst_embed)\n",
+    "        ensemble_vec, weights = self.inst_attention(torch.ones((1, B, self.embed_dim)), \\\n",
+    "                                                    inst_embed, \\\n",
+    "                                                    inst_embed, \\\n",
+    "                                                    inst_mask.transpose(0, 1))\n",
     "        \n",
     "        # LxBxD\n",
     "        inputs = torch.cat((self.embedding(history), ensemble_vec.expand(L, -1, -1)), dim=2)\n",
@@ -195,6 +200,7 @@
     "message_history = torch.tensor(recording[:nsamples, 0], dtype=torch.long).view(-1, 1)\n",
     "mask = torch.zeros(message_history.shape, dtype=torch.bool)\n",
     "instruments = torch.tensor([instrument_numbers.index(i) for i in instruments_np], dtype=torch.long).view(-1, 1)\n",
+    "inst_mask = torch.zeros(instruments.shape, dtype=torch.bool)\n",
     "\n",
     "batch_size = 1\n",
     "learning_rate = 0.001\n",
@@ -208,7 +214,7 @@
     "for epoch in range(epochs):\n",
     "    print('Starting epoch %d' %(epoch))\n",
     "    \n",
-    "    message_logits = model(message_history[:-1], mask[:-1], instruments)\n",
+    "    message_logits = model(message_history[:-1], mask[:-1], instruments, inst_mask)\n",
     "    \n",
     "    loss = loss_fn(message_logits.view(-1, message_dim), target_messages)\n",
     "                \n",
@@ -317,7 +323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -331,17 +337,24 @@
     "    # root_dir: the directory to search\n",
     "    def __init__(self, root_dir, transform=None):\n",
     "        files = os.listdir(root_dir)\n",
-    "        self.recordings = []\n",
+    "        self.recording_files = []\n",
     "        self.instrument_files = []\n",
     "        for file in files:\n",
     "            if 'recording' in file:\n",
-    "                self.recordings.append(os.path.join(root_dir, file))\n",
+    "                self.recording_files.append(os.path.join(root_dir, file))\n",
     "            elif 'instruments' in file:\n",
     "                self.instrument_files.append(os.path.join(root_dir, file))\n",
     "                \n",
-    "        assert(len(self.recordings) == len(self.instrument_files))\n",
-    "        self.recordings.sort()\n",
+    "        assert(len(self.recording_files) == len(self.instrument_files))\n",
+    "        self.recording_files.sort()\n",
     "        self.instrument_files.sort()\n",
+    "        \n",
+    "        self.recordings = []\n",
+    "        self.instruments = []\n",
+    "        for f in range(len(self.recording_files)):\n",
+    "            self.recordings.append(np.load(self.recording_files[f], allow_pickle=True)[:, 0])\n",
+    "            self.instruments.append(np.load(self.instrument_files[f], allow_pickle=True))\n",
+    "            \n",
     "        self.transform = transform\n",
     "\n",
     "    # __len__\n",
@@ -356,8 +369,8 @@
     "    # instance['history'] is a length L numpy array containing messages\n",
     "    # instance['instruments'] a numpy array of instrument numbers\n",
     "    def __getitem__(self, idx):\n",
-    "        instance = {'history': np.load(self.recordings[idx], allow_pickle=True)[:, 0], \\\n",
-    "                    'instruments': np.load(self.instrument_files[idx], allow_pickle=True)}\n",
+    "        instance = {'history': self.recordings[idx], \\\n",
+    "                    'instruments': self.instruments[idx]}\n",
     "        \n",
     "        if self.transform:\n",
     "            instance = self.transform(instance)\n",
@@ -367,7 +380,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -380,8 +393,8 @@
     "# sample['mask']: an LxB tensor containing False where a message is\n",
     "# valid, and True where it isn't (accounts for variable length sequences\n",
     "# and zero padding)\n",
-    "# sample['nchan']: a length B tensor containing the number of channels for each batch\n",
-    "# element\n",
+    "# sample['inst_mask']: an NxB tensor containing False where an instrument exists\n",
+    "# and True otherwise\n",
     "def collate_fn(batch):\n",
     "    batch_size = len(batch)\n",
     "    \n",
@@ -389,17 +402,17 @@
     "    max_inst = max([instance['instruments'].shape[0] for instance in batch])\n",
     "    longest_len = max([instance['history'].shape[0] for instance in batch])\n",
     "\n",
-    "    sample = {'history': torch.zeros((longest_len, batch_size, 2), dtype=torch.long), \\\n",
-    "              'instruments': torch.zeros((max_channels, batch_size), dtype=torch.long), \\\n",
+    "    sample = {'history': torch.zeros((longest_len, batch_size), dtype=torch.long), \\\n",
+    "              'instruments': torch.zeros((max_inst, batch_size), dtype=torch.long), \\\n",
     "              'mask': torch.ones((longest_len, batch_size), dtype=torch.bool), \\\n",
-    "              'ninst': torch.zeros(batch_size, dtype=torch.long)}\n",
+    "              'inst_mask': torch.ones((max_inst, batch_size), dtype=torch.bool)}\n",
     "\n",
     "    for b, instance in enumerate(batch):\n",
     "        instrument_idx = [instrument_numbers.index(i) for i in instance['instruments']]\n",
     "        \n",
     "        sample['instruments'][:len(instrument_idx), b] = torch.tensor(instrument_idx, dtype=torch.long)\n",
     "        \n",
-    "        sample['nchan'][b] = len(instrument_idx)\n",
+    "        sample['inst_mask'][:len(instrument_idx), b] = False\n",
     "        \n",
     "        seq_length = instance['history'].shape[0]\n",
     "        sample['history'][:seq_length, b] = torch.tensor(instance['history'], dtype=torch.long)\n",
@@ -417,13 +430,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [],
    "source": [
     "# compute_loss: computes the loss for the model over the batch\n",
     "# ARGUMENTS\n",
-    "# model: EnsembleLSTM model\n",
+    "# model: ComposerLSTM model\n",
     "# loss_fn: torch.nn.CrossEntropyLoss object\n",
     "# batch: see collate_fn definition\n",
     "# RETURN: a scalar loss tensor\n",
@@ -434,47 +447,37 @@
     "        \n",
     "    num_targets = max_seq_length - 1 # Messages start from t = 0, but we start generating at t = 1\n",
     "\n",
-    "    message_logits, channel_logits = model(batch['history'][:-1], batch['mask'][:-1], batch['instruments'])\n",
+    "    message_logits = model(batch['history'][:-1], batch['mask'][:-1], batch['instruments'], batch['inst_mask'])\n",
     "\n",
     "    target_mask = torch.logical_not(batch['mask'][1:])\n",
     "\n",
-    "    num_valid_targets = target_mask.sum()\n",
+    "    target_messages = batch['history'][1:][target_mask]\n",
     "\n",
-    "    target_messages = batch['history'][1:, :, 0][target_mask]\n",
+    "    message_loss = loss_fn(message_logits[target_mask], target_messages)\n",
     "\n",
-    "    message_loss = loss_fn(message_logits[target_mask], target_messages)/num_valid_targets\n",
-    "\n",
-    "    channel_losses = torch.zeros(batch_size)\n",
-    "\n",
-    "    for i in range(batch_size):\n",
-    "        channel_logits_i = channel_logits[:, i, :batch['nchan'][i]][target_mask[:, i]]\n",
-    "        target_channels = batch['history'][1:, i, 1][target_mask[:, i]]\n",
-    "        \n",
-    "        time_shift_mask = target_channels >= 0\n",
-    "        channel_losses[i] = loss_fn(channel_logits_i[time_shift_mask], target_channels[time_shift_mask])/num_valid_targets\n",
-    "\n",
-    "    return message_loss + channel_losses.sum()"
+    "    return message_loss"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [],
    "source": [
     "embed_dim = 256\n",
     "hidden_size = 1024\n",
+    "heads = 4\n",
     "\n",
     "grad_clip = 10\n",
     "\n",
-    "model = EnsembleLSTM(message_dim, embed_dim, num_instruments, hidden_size)\n",
+    "model = ComposerLSTM(message_dim, embed_dim, num_instruments, hidden_size, heads)\n",
     "for p in model.parameters():\n",
     "    p.register_hook(lambda grad: torch.clamp(grad, -grad_clip, grad_clip))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -494,15 +497,7 @@
      "text": [
       "Starting epoch 0\n",
       "Starting iteration 0\n",
-      "Starting iteration 1\n",
-      "Starting iteration 2\n",
-      "Starting iteration 3\n",
-      "Starting iteration 4\n",
-      "Starting iteration 5\n",
-      "Starting iteration 6\n",
-      "Starting iteration 7\n",
-      "Starting iteration 8\n",
-      "Starting iteration 9\n"
+      "Starting iteration 1\n"
      ]
     }
    ],
@@ -517,7 +512,7 @@
     "test_dataset = MIDIDataset('test_unified')\n",
     "test_dataloader = torch.utils.data.DataLoader(test_dataset, batch_size=batch_size, shuffle=True, collate_fn=collate_fn)\n",
     "\n",
-    "loss_fn = torch.nn.CrossEntropyLoss(reduction='sum')\n",
+    "loss_fn = torch.nn.CrossEntropyLoss()\n",
     "epochs = 20\n",
     "train_losses = np.zeros(epochs)\n",
     "test_losses = np.zeros(epochs)\n",
@@ -533,14 +528,14 @@
     "            chunk = {'history': batch['history'][chunk_start:chunk_end],\n",
     "                     'instruments': batch['instruments'],\n",
     "                     'mask': batch['mask'][chunk_start:chunk_end],\n",
-    "                     'nchan': batch['nchan']}\n",
+    "                     'inst_mask': batch['inst_mask']}\n",
     "\n",
     "            loss = compute_loss(model, loss_fn, chunk)\n",
     "            optimizer.zero_grad()\n",
     "            loss.backward()\n",
     "            optimizer.step()\n",
     "        \n",
-    "    torch.save(model.state_dict(), 'trained_models_12_3/epoch' + str(epoch) + '.pth')\n",
+    "    torch.save(model.state_dict(), 'composer_models/epoch' + str(epoch) + '.pth')\n",
     "\n",
     "    print('Computing test loss')\n",
     "    model.eval()\n",
@@ -551,7 +546,7 @@
     "            chunk = {'history': batch['history'][chunk_start:chunk_end],\n",
     "                     'instruments': batch['instruments'],\n",
     "                     'mask': batch['mask'][chunk_start:chunk_end],\n",
-    "                     'nchan': batch['nchan']}\n",
+    "                     'inst_mask': batch['inst_mask']}\n",
     "\n",
     "            loss = compute_loss(model, loss_fn, chunk)\n",
     "            test_losses[epoch] += loss.data\n",
@@ -564,7 +559,7 @@
     "            chunk = {'history': batch['history'][chunk_start:chunk_end],\n",
     "                     'instruments': batch['instruments'],\n",
     "                     'mask': batch['mask'][chunk_start:chunk_end],\n",
-    "                     'nchan': batch['nchan']}\n",
+    "                     'inst_mask': batch['inst_mask']}\n",
     "\n",
     "            loss = compute_loss(model, loss_fn, chunk)\n",
     "            train_losses[epoch] += loss.data\n",
@@ -601,18 +596,20 @@
     "time_steps = 500 # How many time steps do we sample?\n",
     "\n",
     "# Start with a time shift\n",
-    "gen_history = torch.zeros((1, 1, 2), dtype=torch.long)\n",
-    "gen_history[0, 0, 0] = 387\n",
-    "gen_history[0, 0, 1] = -1\n",
+    "gen_messages = torch.tensor(387).view(1, 1)\n",
+    "model.eval() # Turns off the dropout for evaluation. Need to do this to get repeatable evaluation outputs\n",
     "\n",
-    "# Violin\n",
+    "# Piano\n",
     "instruments = torch.zeros((1, 1), dtype=torch.long)\n",
-    "instruments[0, 0] = 2\n",
-    "    \n",
+    "instruments[0, 0] = 0\n",
+    "\n",
+    "# Move forward in time\n",
+    "wrong_cnt = 0\n",
     "hidden = (torch.zeros(3, 1, hidden_size), torch.zeros(3, 1, hidden_size))\n",
-    "for t in range(0, time_steps):\n",
-    "    ret, hidden = model.forward_generate(gen_history[-1].view(1, 1, 2), instruments, hidden)\n",
-    "    gen_history = torch.cat((gen_history, ret), dim=0)"
+    "for t in range(time_steps):\n",
+    "    ret, hidden = model.forward_generate(gen_messages[-1].view(1, 1), instruments, hidden)\n",
+    "    \n",
+    "    gen_messages = torch.cat((gen_messages, ret), dim=0)"
    ]
   },
   {
@@ -621,8 +618,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "np.save('gen_history.npy', gen_history.squeeze(1).detach().numpy())\n",
-    "np.save('gen_instruments.npy', [instrument_numbers[i] for i in instruments[:-1, 0]])"
+    "# Associate all messages with channel 0 for now\n",
+    "channels = torch.zeros(gen_messages.shape, dtype=torch.long)\n",
+    "gen_history = torch.cat((gen_messages, channels), dim=1)\n",
+    "np.save('test_history.npy', gen_history.detach().numpy())\n",
+    "np.save('test_instruments.npy', np.array([0]))"
    ]
   },
   {
