--- a/assigner.ipynb
+++ b/assigner.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -256,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -313,7 +313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -336,7 +336,7 @@
     "    longest_len = max([instance['history'].shape[0] for instance in batch])\n",
     "\n",
     "    sample = {'history': torch.zeros((longest_len, batch_size, 2), dtype=torch.long), \\\n",
-    "              'instruments': torch.zeros((max_channels, batch_size), dtype=torch.long), \\\n",
+    "              'instruments': torch.zeros((max_inst, batch_size), dtype=torch.long), \\\n",
     "              'mask': torch.ones((longest_len, batch_size), dtype=torch.bool), \\\n",
     "              'inst_mask': torch.ones((max_inst, batch_size), dtype=torch.bool)}\n",
     "\n",
@@ -363,7 +363,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -375,19 +375,14 @@
     "# RETURN: a scalar loss tensor\n",
     "def compute_loss(model, loss_fn, batch):\n",
     "    batch_size = batch['history'].shape[1]\n",
-    "\n",
-    "    channel_probs = torch.log(model(batch['history'][:, :, 0], batch['mask'], batch['instruments'], batch['inst_mask']))\n",
-    "\n",
+    "    channel_probs = torch.log(model(batch['history'][:, :, 0], batch['mask'], batch['instruments'], batch['inst_mask']) + 1e-10)\n",
     "    target_mask = torch.logical_not(batch['mask'])\n",
-    "\n",
-    "    target_channels = batch['history'][:, :, 1][target_mask]\n",
-    "\n",
-    "    return loss_fn(channel_probs[target_mask], target_channels)"
+    "    return loss_fn(channel_probs[target_mask], batch['history'][:, :, 1][target_mask])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -407,7 +402,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -416,11 +411,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 55,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Starting epoch 0\n",
+      "Starting iteration 0\n",
+      "tensor(1.2623)\n",
+      "tensor(0.0004)\n",
+      "tensor(2.7625e-05)\n",
+      "tensor(0.0015)\n",
+      "tensor(0.0004)\n",
+      "tensor(0.0005)\n",
+      "tensor(0.0005)\n",
+      "tensor(0.0017)\n",
+      "tensor(0.0009)\n",
+      "tensor(0.0019)\n",
+      "tensor(0.0019)\n",
+      "tensor(0.0031)\n",
+      "tensor(0.0028)\n",
+      "tensor(0.0062)\n",
+      "tensor(0.0062)\n",
+      "tensor(0.0093)\n",
+      "tensor(0.0205)\n",
+      "tensor(0.0144)\n",
+      "tensor(0.0310)\n"
+     ]
+    },
+    {
+     "ename": "RuntimeError",
+     "evalue": "python_error",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mRuntimeError\u001b[0m                              Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-55-a056f80d0aeb>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     29\u001b[0m             \u001b[0mloss\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcompute_loss\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmodel\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mloss_fn\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mchunk\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     30\u001b[0m             \u001b[0moptimizer\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mzero_grad\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 31\u001b[0;31m             \u001b[0mloss\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mbackward\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     32\u001b[0m             \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mloss\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdata\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     33\u001b[0m             \u001b[0;32mfor\u001b[0m \u001b[0mp\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mmodel\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mparameters\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/opt/conda/lib/python3.7/site-packages/torch/tensor.py\u001b[0m in \u001b[0;36mbackward\u001b[0;34m(self, gradient, retain_graph, create_graph)\u001b[0m\n\u001b[1;32m    182\u001b[0m                 \u001b[0mproducts\u001b[0m\u001b[0;34m.\u001b[0m \u001b[0mDefaults\u001b[0m \u001b[0mto\u001b[0m\u001b[0;31m \u001b[0m\u001b[0;31m`\u001b[0m\u001b[0;31m`\u001b[0m\u001b[0;32mFalse\u001b[0m\u001b[0;31m`\u001b[0m\u001b[0;31m`\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    183\u001b[0m         \"\"\"\n\u001b[0;32m--> 184\u001b[0;31m         \u001b[0mtorch\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mautograd\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mbackward\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mgradient\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mretain_graph\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcreate_graph\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    185\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    186\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0mregister_hook\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mhook\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/opt/conda/lib/python3.7/site-packages/torch/autograd/__init__.py\u001b[0m in \u001b[0;36mbackward\u001b[0;34m(tensors, grad_tensors, retain_graph, create_graph, grad_variables)\u001b[0m\n\u001b[1;32m    121\u001b[0m     Variable._execution_engine.run_backward(\n\u001b[1;32m    122\u001b[0m         \u001b[0mtensors\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mgrad_tensors\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mretain_graph\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcreate_graph\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 123\u001b[0;31m         allow_unreachable=True)  # allow_unreachable flag\n\u001b[0m\u001b[1;32m    124\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    125\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mRuntimeError\u001b[0m: python_error"
+     ]
+    }
+   ],
    "source": [
     "batch_size = 10\n",
     "learning_rate = 0.001\n",
@@ -432,7 +468,7 @@
     "test_dataset = MIDIDataset('test_unified')\n",
     "test_dataloader = torch.utils.data.DataLoader(test_dataset, batch_size=batch_size, shuffle=True, collate_fn=collate_fn)\n",
     "\n",
-    "loss_fn = torch.nn.NLLLoss()\n",
+    "loss_fn = torch.nn.NLLLoss(ignore_index=-1)\n",
     "epochs = 20\n",
     "train_losses = np.zeros(epochs)\n",
     "test_losses = np.zeros(epochs)\n",
