Handle chunking in dataset class

--- a/assigner.ipynb
+++ b/assigner.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -256,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -268,36 +268,41 @@
     "    # as well as instruments0.npy to instrumentsM.npy\n",
     "    # ARGUMENTS\n",
     "    # root_dir: the directory to search\n",
-    "    def __init__(self, root_dir, transform=None):\n",
+    "    # chunk_size: we'll chunk the data into chunks of this size (or less)\n",
+    "    def __init__(self, root_dir, chunk_size, transform=None):\n",
     "        files = os.listdir(root_dir)\n",
-    "        self.recording_files = []\n",
-    "        self.instrument_files = []\n",
+    "        recording_files = []\n",
+    "        instrument_files = []\n",
     "        for file in files:\n",
     "            if 'recording' in file:\n",
-    "                self.recording_files.append(os.path.join(root_dir, file))\n",
+    "                recording_files.append(os.path.join(root_dir, file))\n",
     "            elif 'instruments' in file:\n",
-    "                self.instrument_files.append(os.path.join(root_dir, file))\n",
+    "                instrument_files.append(os.path.join(root_dir, file))\n",
     "                \n",
-    "        assert(len(self.recording_files) == len(self.instrument_files))\n",
-    "        self.recording_files.sort()\n",
-    "        self.instrument_files.sort()\n",
+    "        assert(len(recording_files) == len(instrument_files))\n",
+    "        recording_files.sort()\n",
+    "        instrument_files.sort()\n",
     "        \n",
     "        self.recordings = []\n",
     "        self.instruments = []\n",
-    "        for f in range(len(self.recording_files)):\n",
-    "            self.recordings.append(np.load(self.recording_files[f], allow_pickle=True))\n",
-    "            self.instruments.append(np.load(self.instrument_files[f], allow_pickle=True))\n",
+    "        for f in range(len(recording_files)):\n",
+    "            recording = np.load(recording_files[f], allow_pickle=True)\n",
+    "            inst = np.load(instrument_files[f], allow_pickle=True)\n",
+    "            for chunk_start in range(0, recording.shape[0], chunk_size):\n",
+    "                chunk_end = min(chunk_start + chunk_size, recording.shape[0])\n",
+    "                self.recordings.append(recording[chunk_start:chunk_end])\n",
+    "                self.instruments.append(inst)\n",
     "            \n",
     "        self.transform = transform\n",
     "\n",
     "    # __len__\n",
-    "    # RETURN: the number of recording files in the dataset\n",
+    "    # RETURN: the number of recording chunks in the dataset\n",
     "    def __len__(self):\n",
     "        return len(self.recordings)\n",
     "\n",
     "    # __getitem__\n",
     "    # ARGUMENTS\n",
-    "    # idx: indicates which file to get\n",
+    "    # idx: indicates which chunk to get\n",
     "    # RETURN: an instance with keys 'instruments', 'history'\n",
     "    # instance['history'] is an Lx2 numpy array containing messages and associated channels\n",
     "    # instance['instruments'] a numpy array of instrument numbers\n",
@@ -313,7 +318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -336,7 +341,7 @@
     "    longest_len = max([instance['history'].shape[0] for instance in batch])\n",
     "\n",
     "    sample = {'history': torch.zeros((longest_len, batch_size, 2), dtype=torch.long), \\\n",
-    "              'instruments': torch.zeros((max_channels, batch_size), dtype=torch.long), \\\n",
+    "              'instruments': torch.zeros((max_inst, batch_size), dtype=torch.long), \\\n",
     "              'mask': torch.ones((longest_len, batch_size), dtype=torch.bool), \\\n",
     "              'inst_mask': torch.ones((max_inst, batch_size), dtype=torch.bool)}\n",
     "\n",
@@ -363,7 +368,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -387,7 +392,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -407,7 +412,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -416,23 +421,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Starting epoch 0\n",
+      "Starting iteration 0\n"
+     ]
+    },
+    {
+     "ename": "IndexError",
+     "evalue": "Target -1 is out of bounds.",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-42-8ffb539f360f>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     19\u001b[0m     \u001b[0;32mfor\u001b[0m \u001b[0mb\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mbatch\u001b[0m \u001b[0;32min\u001b[0m \u001b[0menumerate\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtrain_dataloader\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     20\u001b[0m         \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'Starting iteration %d'\u001b[0m \u001b[0;34m%\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mb\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 21\u001b[0;31m         \u001b[0mloss\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcompute_loss\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmodel\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mloss_fn\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mbatch\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     22\u001b[0m         \u001b[0moptimizer\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mzero_grad\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     23\u001b[0m         \u001b[0mloss\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mbackward\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m<ipython-input-39-cc54285e181b>\u001b[0m in \u001b[0;36mcompute_loss\u001b[0;34m(model, loss_fn, batch)\u001b[0m\n\u001b[1;32m     14\u001b[0m     \u001b[0mtarget_channels\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mbatch\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'history'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m:\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mtarget_mask\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     15\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 16\u001b[0;31m     \u001b[0;32mreturn\u001b[0m \u001b[0mloss_fn\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mchannel_probs\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mtarget_mask\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtarget_channels\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m/opt/conda/lib/python3.7/site-packages/torch/nn/modules/module.py\u001b[0m in \u001b[0;36m__call__\u001b[0;34m(self, *input, **kwargs)\u001b[0m\n\u001b[1;32m    575\u001b[0m             \u001b[0mresult\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_slow_forward\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0minput\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    576\u001b[0m         \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 577\u001b[0;31m             \u001b[0mresult\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mforward\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0minput\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    578\u001b[0m         \u001b[0;32mfor\u001b[0m \u001b[0mhook\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_forward_hooks\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mvalues\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    579\u001b[0m             \u001b[0mhook_result\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mhook\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0minput\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mresult\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/opt/conda/lib/python3.7/site-packages/torch/nn/modules/loss.py\u001b[0m in \u001b[0;36mforward\u001b[0;34m(self, input, target)\u001b[0m\n\u001b[1;32m    203\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    204\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0mforward\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0minput\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtarget\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 205\u001b[0;31m         \u001b[0;32mreturn\u001b[0m \u001b[0mF\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mnll_loss\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0minput\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtarget\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mweight\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mweight\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mignore_index\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mignore_index\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mreduction\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mreduction\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    206\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    207\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/opt/conda/lib/python3.7/site-packages/torch/nn/functional.py\u001b[0m in \u001b[0;36mnll_loss\u001b[0;34m(input, target, weight, size_average, ignore_index, reduce, reduction)\u001b[0m\n\u001b[1;32m   2216\u001b[0m                          .format(input.size(0), target.size(0)))\n\u001b[1;32m   2217\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0mdim\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;36m2\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 2218\u001b[0;31m         \u001b[0mret\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtorch\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_C\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_nn\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mnll_loss\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0minput\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtarget\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mweight\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0m_Reduction\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget_enum\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mreduction\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mignore_index\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   2219\u001b[0m     \u001b[0;32melif\u001b[0m \u001b[0mdim\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;36m4\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   2220\u001b[0m         \u001b[0mret\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtorch\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_C\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_nn\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mnll_loss2d\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0minput\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtarget\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mweight\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0m_Reduction\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget_enum\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mreduction\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mignore_index\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mIndexError\u001b[0m: Target -1 is out of bounds."
+     ]
+    }
+   ],
    "source": [
     "batch_size = 10\n",
     "learning_rate = 0.001\n",
     "chunk_size = 500\n",
     "\n",
-    "train_dataset = MIDIDataset('train_unified')\n",
+    "train_dataset = MIDIDataset('train_unified', chunk_size)\n",
     "train_dataloader = torch.utils.data.DataLoader(train_dataset, batch_size=batch_size, shuffle=True, collate_fn=collate_fn)\n",
     "\n",
-    "test_dataset = MIDIDataset('test_unified')\n",
+    "test_dataset = MIDIDataset('test_unified', chunk_size)\n",
     "test_dataloader = torch.utils.data.DataLoader(test_dataset, batch_size=batch_size, shuffle=True, collate_fn=collate_fn)\n",
     "\n",
-    "loss_fn = torch.nn.NLLLoss()\n",
+    "loss_fn = torch.nn.NLLLoss(ignore_index=-1)\n",
     "epochs = 20\n",
     "train_losses = np.zeros(epochs)\n",
     "test_losses = np.zeros(epochs)\n",
@@ -442,47 +471,23 @@
     "    model.train()\n",
     "    for b, batch in enumerate(train_dataloader):\n",
     "        print('Starting iteration %d' %(b))\n",
-    "        for chunk_start in range(0, batch['history'].shape[0], chunk_size):\n",
-    "            chunk_end = min(batch['history'].shape[0], chunk_start + chunk_size)\n",
-    "            \n",
-    "            chunk = {'history': batch['history'][chunk_start:chunk_end],\n",
-    "                     'instruments': batch['instruments'],\n",
-    "                     'mask': batch['mask'][chunk_start:chunk_end],\n",
-    "                     'inst_mask': batch['inst_mask']}\n",
-    "\n",
-    "            loss = compute_loss(model, loss_fn, chunk)\n",
-    "            optimizer.zero_grad()\n",
-    "            loss.backward()\n",
-    "            optimizer.step()\n",
+    "        loss = compute_loss(model, loss_fn, batch)\n",
+    "        optimizer.zero_grad()\n",
+    "        loss.backward()\n",
+    "        optimizer.step()\n",
     "        \n",
     "    torch.save(model.state_dict(), 'assigner_models/epoch' + str(epoch) + '.pth')\n",
     "\n",
     "    print('Computing test loss')\n",
     "    model.eval()\n",
     "    for batch in test_dataloader:\n",
-    "        for chunk_start in range(0, batch['history'].shape[0], chunk_size):\n",
-    "            chunk_end = min(batch['history'].shape[0], chunk_start + chunk_size)\n",
-    "            \n",
-    "            chunk = {'history': batch['history'][chunk_start:chunk_end],\n",
-    "                     'instruments': batch['instruments'],\n",
-    "                     'mask': batch['mask'][chunk_start:chunk_end],\n",
-    "                     'inst_mask': batch['inst_mask']}\n",
-    "\n",
-    "            loss = compute_loss(model, loss_fn, chunk)\n",
-    "            test_losses[epoch] += loss.data\n",
+    "        loss = compute_loss(model, loss_fn, batch)\n",
+    "        test_losses[epoch] += loss.data\n",
     "        \n",
     "    print('Computing train loss')\n",
     "    for batch in train_dataloader:\n",
-    "        for chunk_start in range(0, batch['history'].shape[0], chunk_size):\n",
-    "            chunk_end = min(batch['history'].shape[0], chunk_start + chunk_size)\n",
-    "            \n",
-    "            chunk = {'history': batch['history'][chunk_start:chunk_end],\n",
-    "                     'instruments': batch['instruments'],\n",
-    "                     'mask': batch['mask'][chunk_start:chunk_end],\n",
-    "                     'inst_mask': batch['inst_mask']}\n",
-    "\n",
-    "            loss = compute_loss(model, loss_fn, chunk)\n",
-    "            train_losses[epoch] += loss.data\n",
+    "        loss = compute_loss(model, loss_fn, batch)\n",
+    "        train_losses[epoch] += loss.data\n",
     "    \n",
     "    train_losses[epoch] /= len(train_dataloader)\n",
     "    test_losses[epoch] /= len(test_dataloader)\n",
