--- a/composer.ipynb
+++ b/composer.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -323,7 +323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -335,36 +335,41 @@
     "    # as well as instruments0.npy to instrumentsM.npy\n",
     "    # ARGUMENTS\n",
     "    # root_dir: the directory to search\n",
-    "    def __init__(self, root_dir, transform=None):\n",
+    "    # chunk_size: we'll chunk the data into chunks of this size (or less)\n",
+    "    def __init__(self, root_dir, chunk_size, transform=None):\n",
     "        files = os.listdir(root_dir)\n",
-    "        self.recording_files = []\n",
-    "        self.instrument_files = []\n",
+    "        recording_files = []\n",
+    "        instrument_files = []\n",
     "        for file in files:\n",
     "            if 'recording' in file:\n",
-    "                self.recording_files.append(os.path.join(root_dir, file))\n",
+    "                recording_files.append(os.path.join(root_dir, file))\n",
     "            elif 'instruments' in file:\n",
-    "                self.instrument_files.append(os.path.join(root_dir, file))\n",
+    "                instrument_files.append(os.path.join(root_dir, file))\n",
     "                \n",
-    "        assert(len(self.recording_files) == len(self.instrument_files))\n",
-    "        self.recording_files.sort()\n",
-    "        self.instrument_files.sort()\n",
+    "        assert(len(recording_files) == len(instrument_files))\n",
+    "        recording_files.sort()\n",
+    "        instrument_files.sort()\n",
     "        \n",
     "        self.recordings = []\n",
     "        self.instruments = []\n",
-    "        for f in range(len(self.recording_files)):\n",
-    "            self.recordings.append(np.load(self.recording_files[f], allow_pickle=True)[:, 0])\n",
-    "            self.instruments.append(np.load(self.instrument_files[f], allow_pickle=True))\n",
+    "        for f in range(len(recording_files)):\n",
+    "            recording = np.load(recording_files[f], allow_pickle=True)[:, 0]\n",
+    "            inst = np.load(instrument_files[f], allow_pickle=True)\n",
+    "            for chunk_start in range(0, recording.shape[0], chunk_size):\n",
+    "                chunk_end = min(chunk_start + chunk_size, recording.shape[0])\n",
+    "                self.recordings.append(recording[chunk_start:chunk_end])\n",
+    "                self.instruments.append(inst)\n",
     "            \n",
     "        self.transform = transform\n",
     "\n",
     "    # __len__\n",
-    "    # RETURN: the number of recording files in the dataset\n",
+    "    # RETURN: the number of chunks in the dataset\n",
     "    def __len__(self):\n",
     "        return len(self.recordings)\n",
     "\n",
     "    # __getitem__\n",
     "    # ARGUMENTS\n",
-    "    # idx: indicates which file to get\n",
+    "    # idx: indicates which chunk to get\n",
     "    # RETURN: an instance with keys 'instruments', 'history'\n",
     "    # instance['history'] is a length L numpy array containing messages\n",
     "    # instance['instruments'] a numpy array of instrument numbers\n",
@@ -380,7 +385,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -430,7 +435,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -460,7 +465,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -477,7 +482,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -490,26 +495,16 @@
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Starting epoch 0\n",
-      "Starting iteration 0\n",
-      "Starting iteration 1\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "batch_size = 10\n",
     "learning_rate = 0.001\n",
     "chunk_size = 500\n",
     "\n",
-    "train_dataset = MIDIDataset('train_unified')\n",
+    "train_dataset = MIDIDataset('train_unified', chunk_size)\n",
     "train_dataloader = torch.utils.data.DataLoader(train_dataset, batch_size=batch_size, shuffle=True, collate_fn=collate_fn)\n",
     "\n",
-    "test_dataset = MIDIDataset('test_unified')\n",
+    "test_dataset = MIDIDataset('test_unified', chunk_size)\n",
     "test_dataloader = torch.utils.data.DataLoader(test_dataset, batch_size=batch_size, shuffle=True, collate_fn=collate_fn)\n",
     "\n",
     "loss_fn = torch.nn.CrossEntropyLoss()\n",
@@ -522,47 +517,23 @@
     "    model.train()\n",
     "    for b, batch in enumerate(train_dataloader):\n",
     "        print('Starting iteration %d' %(b))\n",
-    "        for chunk_start in range(0, batch['history'].shape[0] - 1, chunk_size):\n",
-    "            chunk_end = min(batch['history'].shape[0], chunk_start + chunk_size)\n",
-    "            \n",
-    "            chunk = {'history': batch['history'][chunk_start:chunk_end],\n",
-    "                     'instruments': batch['instruments'],\n",
-    "                     'mask': batch['mask'][chunk_start:chunk_end],\n",
-    "                     'inst_mask': batch['inst_mask']}\n",
-    "\n",
-    "            loss = compute_loss(model, loss_fn, chunk)\n",
-    "            optimizer.zero_grad()\n",
-    "            loss.backward()\n",
-    "            optimizer.step()\n",
+    "        loss = compute_loss(model, loss_fn, batch)\n",
+    "        optimizer.zero_grad()\n",
+    "        loss.backward()\n",
+    "        optimizer.step()\n",
     "        \n",
     "    torch.save(model.state_dict(), 'composer_models/epoch' + str(epoch) + '.pth')\n",
     "\n",
     "    print('Computing test loss')\n",
     "    model.eval()\n",
     "    for batch in test_dataloader:\n",
-    "        for chunk_start in range(0, batch['history'].shape[0] - 1, chunk_size):\n",
-    "            chunk_end = min(batch['history'].shape[0], chunk_start + chunk_size)\n",
-    "            \n",
-    "            chunk = {'history': batch['history'][chunk_start:chunk_end],\n",
-    "                     'instruments': batch['instruments'],\n",
-    "                     'mask': batch['mask'][chunk_start:chunk_end],\n",
-    "                     'inst_mask': batch['inst_mask']}\n",
-    "\n",
-    "            loss = compute_loss(model, loss_fn, chunk)\n",
-    "            test_losses[epoch] += loss.data\n",
+    "        loss = compute_loss(model, loss_fn, batch)\n",
+    "        test_losses[epoch] += loss.data\n",
     "        \n",
     "    print('Computing train loss')\n",
     "    for batch in train_dataloader:\n",
-    "        for chunk_start in range(0, batch['history'].shape[0] - 1, chunk_size):\n",
-    "            chunk_end = min(batch['history'].shape[0], chunk_start + chunk_size)\n",
-    "            \n",
-    "            chunk = {'history': batch['history'][chunk_start:chunk_end],\n",
-    "                     'instruments': batch['instruments'],\n",
-    "                     'mask': batch['mask'][chunk_start:chunk_end],\n",
-    "                     'inst_mask': batch['inst_mask']}\n",
-    "\n",
-    "            loss = compute_loss(model, loss_fn, chunk)\n",
-    "            train_losses[epoch] += loss.data\n",
+    "        loss = compute_loss(model, loss_fn, batch)\n",
+    "        train_losses[epoch] += loss.data\n",
     "    \n",
     "    train_losses[epoch] /= len(train_dataloader)\n",
     "    test_losses[epoch] /= len(test_dataloader)\n",
