--- a/train_unified.ipynb
+++ b/train_unified.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -332,7 +332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -344,35 +344,46 @@
     "    # as well as instruments0.npy to instrumentsM.npy\n",
     "    # ARGUMENTS\n",
     "    # root_dir: the directory to search\n",
-    "    def __init__(self, root_dir, transform=None):\n",
+    "    # chunk_size: we'll chunk the data into chunks of this size (or less)\n",
+    "    def __init__(self, root_dir, chunk_size, transform=None):\n",
     "        files = os.listdir(root_dir)\n",
-    "        self.recordings = []\n",
-    "        self.instrument_files = []\n",
+    "        recording_files = []\n",
+    "        instrument_files = []\n",
     "        for file in files:\n",
     "            if 'recording' in file:\n",
-    "                self.recordings.append(os.path.join(root_dir, file))\n",
+    "                recording_files.append(os.path.join(root_dir, file))\n",
     "            elif 'instruments' in file:\n",
-    "                self.instrument_files.append(os.path.join(root_dir, file))\n",
+    "                instrument_files.append(os.path.join(root_dir, file))\n",
     "                \n",
-    "        assert(len(self.recordings) == len(self.instrument_files))\n",
-    "        self.recordings.sort()\n",
-    "        self.instrument_files.sort()\n",
+    "        assert(len(recording_files) == len(instrument_files))\n",
+    "        recording_files.sort()\n",
+    "        instrument_files.sort()\n",
     "        self.transform = transform\n",
+    "        \n",
+    "        self.recordings = []\n",
+    "        self.instruments = []\n",
+    "        for f in range(len(recording_files)):\n",
+    "            recording = np.load(recording_files[f], allow_pickle=True)\n",
+    "            inst = np.load(instrument_files[f], allow_pickle=True)\n",
+    "            for chunk_start in range(0, recording.shape[0], chunk_size):\n",
+    "                chunk_end = min(chunk_start + chunk_size, recording.shape[0])\n",
+    "                self.recordings.append(recording[chunk_start:chunk_end])\n",
+    "                self.instruments.append(inst)\n",
     "\n",
     "    # __len__\n",
-    "    # RETURN: the number of recording files in the dataset\n",
+    "    # RETURN: number of chunks in the dataset\n",
     "    def __len__(self):\n",
     "        return len(self.recordings)\n",
     "\n",
     "    # __getitem__\n",
     "    # ARGUMENTS\n",
-    "    # idx: indicates which file to get\n",
+    "    # idx: indicates which chunk to get\n",
     "    # RETURN: an instance with keys 'instruments', 'history'\n",
     "    # instance['history'] is an Lx2 numpy array containing messages and associated channels\n",
     "    # instance['instruments'] a numpy array of instrument numbers\n",
     "    def __getitem__(self, idx):\n",
-    "        instance = {'history': np.load(self.recordings[idx], allow_pickle=True), \\\n",
-    "                    'instruments': np.load(self.instrument_files[idx], allow_pickle=True)}\n",
+    "        instance = {'history': self.recordings[idx], \\\n",
+    "                    'instruments': self.instruments[idx]}\n",
     "        \n",
     "        if self.transform:\n",
     "            instance = self.transform(instance)\n",
@@ -382,7 +393,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -432,7 +443,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -473,7 +484,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -494,7 +505,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -513,13 +524,13 @@
     "learning_rate = 0.001\n",
     "chunk_size = 500\n",
     "\n",
-    "train_dataset = MIDIDataset('train_unified')\n",
+    "train_dataset = MIDIDataset('train_unified', chunk_size)\n",
     "train_dataloader = torch.utils.data.DataLoader(train_dataset, batch_size=batch_size, shuffle=True, collate_fn=collate_fn)\n",
     "\n",
-    "test_dataset = MIDIDataset('test_unified')\n",
+    "test_dataset = MIDIDataset('test_unified', chunk_size)\n",
     "test_dataloader = torch.utils.data.DataLoader(test_dataset, batch_size=batch_size, shuffle=True, collate_fn=collate_fn)\n",
     "\n",
-    "loss_fn = torch.nn.CrossEntropyLoss(reduction='sum')\n",
+    "loss_fn = torch.nn.CrossEntropyLoss()\n",
     "epochs = 20\n",
     "train_losses = np.zeros(epochs)\n",
     "test_losses = np.zeros(epochs)\n",
@@ -529,47 +540,23 @@
     "    model.train()\n",
     "    for b, batch in enumerate(train_dataloader):\n",
     "        print('Starting iteration %d' %(b))\n",
-    "        for chunk_start in range(0, batch['history'].shape[0] - 1, chunk_size):\n",
-    "            chunk_end = min(batch['history'].shape[0], chunk_start + chunk_size)\n",
-    "            \n",
-    "            chunk = {'history': batch['history'][chunk_start:chunk_end],\n",
-    "                     'instruments': batch['instruments'],\n",
-    "                     'mask': batch['mask'][chunk_start:chunk_end],\n",
-    "                     'nchan': batch['nchan']}\n",
-    "\n",
-    "            loss = compute_loss(model, loss_fn, chunk)\n",
-    "            optimizer.zero_grad()\n",
-    "            loss.backward()\n",
-    "            optimizer.step()\n",
+    "        loss = compute_loss(model, loss_fn, batch)\n",
+    "        optimizer.zero_grad()\n",
+    "        loss.backward()\n",
+    "        optimizer.step()\n",
     "        \n",
     "    torch.save(model.state_dict(), 'trained_models_12_3/epoch' + str(epoch) + '.pth')\n",
     "\n",
     "    print('Computing test loss')\n",
     "    model.eval()\n",
     "    for batch in test_dataloader:\n",
-    "        for chunk_start in range(0, batch['history'].shape[0] - 1, chunk_size):\n",
-    "            chunk_end = min(batch['history'].shape[0], chunk_start + chunk_size)\n",
-    "            \n",
-    "            chunk = {'history': batch['history'][chunk_start:chunk_end],\n",
-    "                     'instruments': batch['instruments'],\n",
-    "                     'mask': batch['mask'][chunk_start:chunk_end],\n",
-    "                     'nchan': batch['nchan']}\n",
-    "\n",
-    "            loss = compute_loss(model, loss_fn, chunk)\n",
-    "            test_losses[epoch] += loss.data\n",
+    "        loss = compute_loss(model, loss_fn, batch)\n",
+    "        test_losses[epoch] += loss.data\n",
     "        \n",
     "    print('Computing train loss')\n",
     "    for batch in train_dataloader:\n",
-    "        for chunk_start in range(0, batch['history'].shape[0] - 1, chunk_size):\n",
-    "            chunk_end = min(batch['history'].shape[0], chunk_start + chunk_size)\n",
-    "            \n",
-    "            chunk = {'history': batch['history'][chunk_start:chunk_end],\n",
-    "                     'instruments': batch['instruments'],\n",
-    "                     'mask': batch['mask'][chunk_start:chunk_end],\n",
-    "                     'nchan': batch['nchan']}\n",
-    "\n",
-    "            loss = compute_loss(model, loss_fn, chunk)\n",
-    "            train_losses[epoch] += loss.data\n",
+    "        loss = compute_loss(model, loss_fn, batch)\n",
+    "        train_losses[epoch] += loss.data\n",
     "    \n",
     "    train_losses[epoch] /= len(train_dataloader)\n",
     "    test_losses[epoch] /= len(test_dataloader)\n",
@@ -636,7 +623,7 @@
    "outputs": [],
    "source": [
     "np.save('gen_history.npy', gen_history.squeeze(1).detach().numpy())\n",
-    "np.save('gen_instruments.npy', [instrument_numbers[i] for i in instruments[:-1, 0]])"
+    "np.save('gen_instruments.npy', [instrument_numbers[i] for i in instruments[:, 0]])"
    ]
   },
   {
